@@ -1,4 +1,6 @@
 DIST poppler-0.10.6.tar.gz 1527715 RMD160 e4faec8cc22f25a73c1dea054df1d43a364a5e1a SHA1 0bab946444788ee9f21bdfeba6d3d635a618b809 SHA256 bcd78d674c4166af069afdb27af810c012e13cfd2b7b21f9dce63dd3f62bded1
+DIST poppler-0.11.0.tar.gz 1577973 RMD160 b5454f56a5de35b603c531e3da9c3f7504908244 SHA1 b97400a6269634b5e7d41b2e42e6596b1b470655 SHA256 b68f06eccdd64c8662b6cd0dd414aea6eb749d32caba255eca821e487feecb88
 EBUILD poppler-glib-0.10.6.ebuild 1836 RMD160 391e8f05884334d21d5e94e03ccaca2958ecc12e SHA1 7e35820b853e8eeba402e914dcfc8b21c7b17932 SHA256 657cf6693b71bf6a3b0a64cdcb750e2cf86b1b728faf638eea2bb70513ff29b2
-MISC ChangeLog 859 RMD160 25ff69acae21f80e060a2bab9cf851f78bf02915 SHA1 b39663736b1856327649b1dfef58f42c9fe5029b SHA256 2bb2b1615b977fede7435ca242a88637ed3156ba9565b263f36f57e2b9f02b5f
+EBUILD poppler-glib-0.11.0.ebuild 1867 RMD160 cfb03fb0f3bd2e5c179f76bb6922e0b7ad416388 SHA1 ec571c3fb6c2c5958334d01e94a07b896aa54780 SHA256 55913f0b58e22bc39dbae02058aa76fcceb914ddc8afe41597b83cb028266173
+MISC ChangeLog 1006 RMD160 fbcf169cf1398c043c4cfb3829c7b956dc21163d SHA1 bcce33ccc7f1de774dec1a49f5e2052d9b1b8e90 SHA256 0f42e515adf5c13823e75ad53c6c7cfc6cbbab602e3cd564b67e974b60e8b1fd
 MISC metadata.xml 254 RMD160 e2af7df96e23f1a8f34c041859efe8d5b23ac7f0 SHA1 6d81483a9e1e502e7ee60b758f8136cc61a4af8e SHA256 14288b420c7d20adb5f3c4d70b643d0b9436e3aaadcbbdea199b119480b1e617
