@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/poppler-glib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/poppler-glib/ChangeLog,v 1.4 2009/04/19 18:18:33 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/poppler-glib/ChangeLog,v 1.5 2009/05/12 12:03:49 loki_val Exp $
+
+*poppler-glib-0.11.0 (12 May 2009)
+
+  12 May 2009; Peter Alfredsen <loki_val@gentoo.org>
+  +poppler-glib-0.11.0.ebuild:
+  Bump for poppler-0.11.0
 
   19 Apr 2009; Peter Alfredsen <loki_val@gentoo.org>
   -poppler-glib-0.10.5.ebuild:
